added body type compatibility data

--- a/index.html
+++ b/index.html
@@ -17,13 +17,30 @@
                     <canvas id="main-canvas" class="border-box"></canvas>
                 </div>
                 <div class="row u-full-width">
-                    <button onclick="download()">Download</button>
-                    <a href="https://twitter.com/intent/tweet?text=TestingIntent&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
-                        <button>Share!</button>
-                    </a>
+                    <div id="misc-container" class="center-align">
+                        <button class="border-box misc-button" onclick="download()">Download</button>
+                        <a href="https://twitter.com/intent/tweet?text=TestingIntent&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
+                            <button class="border-box misc-button">Share!</button>
+                        </a>
+                    </div>
                 </div>
                 <div class="row u-full-width">
+                    <div class="center-align option-container grid-box" id="torso">
+                        <!-- <div class='grid-item'>✔️</div> -->
+                    </div>
+                    <div class="center-align option-container grid-box" id="eyes">
+                        <!-- <div class='grid-item'>✔️</div> -->
+                    </div>
+                    <div class="center-align option-container grid-box" id="clothes-inner">
+                        <!-- <div class='grid-item'>✔️</div> -->
+                    </div>
                     <div class="center-align option-container grid-box" id="clothes-outer">
+                        <!-- <div class='grid-item'>✔️</div> -->
+                    </div>
+                    <div class="center-align option-container grid-box" id="hair-front">
+                        <!-- <div class='grid-item'>✔️</div> -->
+                    </div>
+                    <div class="center-align option-container grid-box" id="hair-back">
                         <!-- <div class='grid-item'>✔️</div> -->
                     </div>
                 </div>
