proper tab navbar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                         </a>
                     </div>
                 </div>
+                <div id="navbar-container" class="center align row">
+                    <!-- stuff goes here -->
+                </div>
                 <div class="row u-full-width">
                     <div class="center-align option-container grid-box" id="torso">
                         <!-- <div class='grid-item'>✔️</div> -->
