random button added

--- a/index.html
+++ b/index.html
@@ -22,30 +22,16 @@
                         <a href="https://twitter.com/intent/tweet?text=TestingIntent&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
                             <button class="border-box misc-button">Share!</button>
                         </a>
+                        <button class="border-box misc-button" onclick="random()">Random</button>
                     </div>
                 </div>
-                <div id="navbar-container" class="center align row">
+                <div id="navbar-container" class="center-align row u-full-width">
                     <!-- stuff goes here -->
                 </div>
-                <div class="row u-full-width">
-                    <div class="center-align option-container grid-box" id="torso">
-                        <!-- <div class='grid-item'>✔️</div> -->
-                    </div>
-                    <div class="center-align option-container grid-box" id="eyes">
-                        <!-- <div class='grid-item'>✔️</div> -->
-                    </div>
-                    <div class="center-align option-container grid-box" id="clothes-inner">
-                        <!-- <div class='grid-item'>✔️</div> -->
-                    </div>
-                    <div class="center-align option-container grid-box" id="clothes-outer">
-                        <!-- <div class='grid-item'>✔️</div> -->
-                    </div>
-                    <div class="center-align option-container grid-box" id="hair-front">
-                        <!-- <div class='grid-item'>✔️</div> -->
-                    </div>
-                    <div class="center-align option-container grid-box" id="hair-back">
-                        <!-- <div class='grid-item'>✔️</div> -->
-                    </div>
+                <div id="options-container" class="row u-full-width">
+                    <!-- <div class="center-align option-container grid-box" id="torso">
+                         <div class='grid-item'>✔️</div>
+                    </div> -->
                 </div>
             </div>
             <div class='footer'>
