--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <div class='scrolling-bg'></div>
         <main>
             <div id='main-container'>
-                <div class="row">
+                <div id="main-canvas-container" class="row">
                     <canvas id="main-canvas" class="border-box"></canvas>
-                </div>
-                <div id="user-interface" class="row">
                     <div class="row">
+                        <!-- Download, share, credits, ect -->
                         <div id="misc-container" class="center-align">
                             <button class="border-box misc-button" onclick="download()">Download</button>
                             <a href="https://twitter.com/intent/tweet?text=TestingIntent&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
@@ -26,7 +25,9 @@
                             <button class="border-box misc-button" onclick="random()">Random</button>
                         </div>
                     </div>
-                    <div id="navbar-container" class="center-align row u-full-width">
+                </div>
+                <div id="user-interface-container" class="row">
+                    <div id="category-container" class="center-align row u-full-width">
                         <!-- stuff goes here -->
                     </div>
                     <div id="options-container" class="row u-full-width">
