--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     <link rel="stylesheet" type="text/css" href="./css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
+<img src="img/site-style/preview_frame_sized.png" class="hide">
     <body>
         <div class='scrolling-bg'></div>
         <main>
             <div id='main-container'>
-                <div id="main-canvas-container" class="row">
+                <div id="main-canvas-container" class="border-box row">
+                    <div class="frame canvas-frame"></div>
                     <canvas id="main-canvas" class="border-box"></canvas>
-                    <div class="row">
-                        <!-- Download, share, credits, ect -->
+                    <!-- <div class="row">
+                        Download, share, credits, ect
                         <div id="misc-container" class="center-align">
                             <button class="border-box misc-button" onclick="download()">Download</button>
                             <a href="https://twitter.com/intent/tweet?text=TestingIntent&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
@@ -24,13 +26,15 @@
                             </a>
                             <button class="border-box misc-button" onclick="random()">Random</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div id="user-interface-container" class="row">
-                    <div id="category-container" class="center-align row u-full-width">
+                    <div id="category-container" class="border-box center-align row u-full-width">
+                        <div class="frame category-frame"></div>
                         <!-- stuff goes here -->
                     </div>
-                    <div id="options-container" class="row u-full-width">
+                    <div id="options-container" class="border-box center-align row u-full-width">
+                        <div class="frame options-frame"></div>
                         <!-- <div class="center-align option-container grid-box" id="torso">
                             <div class='grid-item'>✔️</div>
                         </div> -->
