--- a/index.html
+++ b/index.html
@@ -29,17 +29,20 @@
                     </div> -->
                 </div>
                 <div id="user-interface-container" class="row">
-                    <div id="category-container" class="border-box center-align row u-full-width">
+                    <div id="category-container" class="border-box center-align">
                         <div class="frame category-frame"></div>
                         <!-- stuff goes here -->
                     </div>
-                    <div id="options-container" class="border-box center-align row u-full-width">
+                    <div id="options-container" class="border-box center-align">
                         <div class="frame options-frame"></div>
                         <!-- <div class="center-align option-container grid-box" id="torso">
                             <div class='grid-item'>✔️</div>
                         </div> -->
                     </div>
                 </div>
+                <!-- <div id="misc-container" class="row">
+                    <button class="border-box misc-button" onclick="random()"><img src='img/site-style/button_random.png'></button>
+                </div> -->
             </div>
             <div class='footer'>
                 <!-- footer -->
