--- a/index.html
+++ b/index.html
@@ -28,16 +28,22 @@
                         </div>
                     </div> -->
                 </div>
-                <div id="user-interface-container" class="row">
-                    <div id="category-container" class="border-box center-align">
-                        <div class="frame category-frame"></div>
-                        <!-- stuff goes here -->
+                <div id="right-side-container">
+                    <div id="user-interface-container" class="row">
+                        <div id="category-container" class="border-box center-align">
+                            <div class="frame category-frame"></div>
+                            <!-- stuff goes here -->
+                        </div>
+                        <div id="options-container" class="border-box center-align">
+                            <div class="frame options-frame"></div>
+                            <!-- <div class="center-align option-container grid-box" id="torso">
+                                <div class='grid-item'>✔️</div>
+                            </div> -->
+                        </div>
                     </div>
-                    <div id="options-container" class="border-box center-align">
-                        <div class="frame options-frame"></div>
-                        <!-- <div class="center-align option-container grid-box" id="torso">
-                            <div class='grid-item'>✔️</div>
-                        </div> -->
+                    <div id="misc-container">
+                        <button  id='misc-button-random' class="border-box misc-button" onclick="random()"></button>
+                        <button  id='misc-button-generate' class="border-box misc-button" onclick="random()"></button>
                     </div>
                 </div>
                 <!-- <div id="misc-container" class="row">
