grid part scroll

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <div id="user-interface-container" class="row">
                         <div id="category-container" class="border-box center-align">
                             <div class="frame category-frame"></div>
+                            <div id="category-inner-container">
+
+                            </div>
                             <!-- stuff goes here -->
                         </div>
                         <div id="options-container" class="border-box center-align">
