--- a/index.html
+++ b/index.html
@@ -39,14 +39,23 @@
                         </div>
                         <div id="options-container" class="border-box center-align">
                             <div class="frame options-frame"></div>
+                            <div id="options-inner-container" class="center-align"></div>
                             <!-- <div class="center-align option-container grid-box" id="torso">
                                 <div class='grid-item'>✔️</div>
                             </div> -->
                         </div>
                     </div>
                     <div id="misc-container">
-                        <button  id='misc-button-random' class="border-box misc-button" onclick="random()"></button>
-                        <button  id='misc-button-generate' class="border-box misc-button" onclick="random()"></button>
+                        <button  id='misc-button-random' class="border-box misc-button center-align" onclick="random()">
+                            <img src="img/site-style/button1_t.png">
+                            <div class="frame misc-button-random-frame">
+                            </div>
+                        </button>
+                        <button  id='misc-button-generate' class="border-box misc-button center-align" onclick="random()">
+                            <img src="img/site-style/button2_t.png">
+                            <div class="frame misc-button-generate-frame">
+                            </div>
+                        </button>
                     </div>
                 </div>
                 <!-- <div id="misc-container" class="row">
