reinstated dl button

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="frame misc-button-random-frame">
                             </div>
                         </button>
-                        <button  id='misc-button-generate' class="border-box misc-button center-align" onclick="random()">
+                        <button  id='misc-button-generate' class="border-box misc-button center-align" onclick="download()">
                             <img src="img/site-style/button2_t.png">
                             <div class="frame misc-button-generate-frame">
                             </div>
