generation frame almost done

--- a/index.html
+++ b/index.html
@@ -72,9 +72,28 @@
                 <div id="pop-up-content-container" class="center-align border-box">
                     <div class="frame pop-up-frame"></div>
                     <div id="pop-up-inner-content-container">
-                        <img id="pop-up-photo" class="row">
+                        <div class="pop-up-1 center-align">
+                            <img id="pop-up-photo" class="row">
+                        </div>
+                        <div class="pop-up-2 center-align">
+                            <ul>
+                                <li>Download the image!</li>
+                                <li>Tweet the image!</li>
+                            </ul>
+                        </div>
+                        <div class="pop-up-3 center-align">
+                            <button  id='misc-button-download' class="border-box misc-button center-align" onclick="download()">
+                                <img src="img/site-style/button4_t.png">
+                                <div class="frame misc-button-download-frame">
+                                </div>
+                            </button>
+                            <button  id='misc-button-credits' class="border-box misc-button center-align" onclick="download()">
+                                <img src="img/site-style/button5_t.png">
+                                <div class="frame misc-button-credits-frame">
+                                </div>
+                            </button>
+                        </div>
                     </div>
-                    wow...
                 </div>
             </div>
         </main>
