added scroll buttons

--- a/index.html
+++ b/index.html
@@ -20,30 +20,19 @@
                         <img src="img/site-style/kson_with_doll.png">
                     </div> -->
                     <canvas id="main-canvas" class="border-box"></canvas>
-                    <!-- <img id="main-canvas-output"> -->
-                    <!-- <div class="row">
-                        Download, share, credits, ect
-                        <div id="misc-container" class="center-align">
-                            <button class="border-box misc-button" onclick="download()">Download</button>
-                            <a href="https://twitter.com/intent/tweet?text=TestingIntent&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
-                                <button class="border-box misc-button">Share!</button>
-                            </a>
-                            <button class="border-box misc-button" onclick="random()">Random</button>
-                        </div>
-                    </div> -->
                 </div>
                 <div id="right-side-container">
                     <div id="user-interface-container" class="row">
                         <div id="category-container" class="border-box center-align">
                             <div class="frame category-frame">
-                                <!-- <img class="button-arrow" src="img/site-style/button_arrow.png">
-                                <img class="button-arrow" src="img/site-style/button_arrow.png"> -->
                             </div>
                             <div id="category-inner-container" class="center-align">
                                 <div id="category-inner-inner-container" class="center-align">
                                     <!-- stuff goes here -->
                                 </div>
                             </div>
+                            <img id="button-category-scroll-top" class="button-arrow-up" src="img/site-style/button_arrow.png">
+                            <img id="button-category-scroll-bottom" class="button-arrow-down" src="img/site-style/button_arrow.png">
                         </div>
                         <div id="options-container" class="border-box center-align">
                             <div class="frame options-frame"></div>
