hats and ahoge are in

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                                     <!-- stuff goes here -->
                                 </div>
                             </div>
-                            <img id="button-category-scroll-top" class="button-arrow-up" src="img/site-style/button_arrow.png">
-                            <img id="button-category-scroll-bottom" class="button-arrow-down" src="img/site-style/button_arrow.png">
+                            <div id="button-category-scroll-top" class="button-arrow-up" src="img/site-style/button_arrow.png"></div>
+                            <div id="button-category-scroll-bottom" class="button-arrow-down" src="img/site-style/button_arrow.png"></div>
                         </div>
                         <div id="options-container" class="border-box center-align">
                             <div class="frame options-frame"></div>
