added Tweet button

--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@
                                 <div class="frame misc-button-download-frame">
                                 </div>
                             </button>
-                            <button  id='misc-button-credits' class="border-box misc-button center-align" onclick="download()">
-                                <img src="img/site-style/button5_t.png">
-                                <div class="frame misc-button-credits-frame">
-                                </div>
-                            </button>
+                            <a class='misc-button border-box button center-align' href="https://twitter.com/intent/tweet?text=Happy%20birthday%2C%20kson%21&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
+                                <button  id='misc-button-credits' class="misc-button center-align">
+                                    <img src="img/site-style/button6_t.png">
+                                    <div class="frame misc-button-credits-frame">
+                                    </div>
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
