--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <!-- <div class="row">happy birthday bossu</div> -->
             <div id='main-container'>
                 <div id="main-canvas-container" class="border-box row">
+                    <div id="marquee-text" class="center-align">Happy birthday, kson!<br>
+                        お誕生日おめでとう!</div>
                     <div class="frame canvas-frame"></div>
                     <!-- <div>
                         <img src="img/site-style/kson_with_doll.png">
@@ -62,14 +64,79 @@
                 <div id="pop-up-content-container" class="center-align border-box">
                     <div class="frame pop-up-frame"></div>
                     <div id="pop-up-inner-content-container">
+                        <div id="pop-up-close">
+                            <img src="img/site-style/cross.png">
+                        </div>
                         <div class="pop-up-1 center-align">
                             <img id="pop-up-photo" class="row">
                         </div>
                         <div class="pop-up-2 center-align">
-                            <ul>
-                                <li>Download the image!</li>
-                                <li>Tweet the image!</li>
-                            </ul>
+                            <div>
+                                Please consider sharing your doll on Twitter with the tag <b>#KSONDOLL</b> so everyone can see it!!!<br>
+                                完成したら <b>#KSONDOLL</b>でツイートして、みんなに見せよう!!!
+                            </div>
+                            <div>
+                                <h5>Credits:</h5>
+                                <h6>Director</h6>
+                                <ul>    
+                                    Elisaya (@v_elisaya)
+                                </ul>
+                                <h6>Programmer</h6>
+                                <ul>  
+                                    Tom "Skeletom" Farro (@FomTarro)
+                                </ul>
+                                <h6>Lead Artists</h6>
+                                <ul>
+                                    UTAH (@Utah_Arts)<br>
+                                    Agustinus (@agustin56252753)<br>            
+                                    Nyctea (@NycteaSnow)
+                                </ul>
+                                <h6>Contributing Artists</h6>
+                                <ul>
+                                    @0518cream •
+                                    @cheese_hui74433 •
+                                    @7cfe31 •
+                                    @LechKal •
+                                    @kintotomaturi •
+                                    @ottoyuen1 •
+                                    @Utah_Arts •
+                                    @Voldox_7591 •
+                                    @wing_art5 •
+                                    @yuyaiyaui •
+                                    @tabetaiii_P •
+                                    @sumi_tuki_ •
+                                    @tontoro_oekaki •
+                                    @agustin56252753 •
+                                    @koma32883613 •
+                                    @rionemui001 •
+                                    @RA0210_k •
+                                    @Kukie_nyan •
+                                    @NycteaSnow •
+                                    @fryinghokke •
+                                    @eri_syumi •
+                                    @Kukyuu_no_ue •
+                                    @achromatist_ •
+                                    @gaston57064599 •
+                                    @IchigoJiang •
+                                    @Foronlyher1 •
+                                    @godzillaghoul17 •
+                                    @hopkBQzf3nx15VA •
+                                    @Matiasja5 •
+                                    murabitoZ • 
+                                    @shiru__u •
+                                    @GnNn218 •
+                                    @CArmadaArtist •
+                                    @DokuroDx •
+                                    @KappaaKo •
+                                    @Maru_ccy •
+                                    @itsuku_129 •
+                                    @Senriso_riki •
+                                    @ryoru97 •
+                                    @pa75727 •
+                                    @pandora_box9 •
+                                    @_patta_chan
+                                </ul>
+                            </div>
                         </div>
                         <div class="pop-up-3 center-align">
                             <button  id='misc-button-download' class="border-box misc-button center-align" onclick="download()">
@@ -77,7 +144,7 @@
                                 <div class="frame misc-button-download-frame">
                                 </div>
                             </button>
-                            <a class='misc-button border-box button center-align' href="https://twitter.com/intent/tweet?text=Happy%20birthday%2C%20kson%21&amp;hashtags=KSON_DOLL" target="_blank" class="share-twitter">
+                            <a class='misc-button border-box button center-align' href="https://twitter.com/intent/tweet?text=Happy%20birthday%2C%20kson%21&amp;hashtags=KSONDOLL" target="_blank" class="share-twitter">
                                 <button  id='misc-button-credits' class="misc-button center-align">
                                     <img src="img/site-style/button6_t.png">
                                     <div class="frame misc-button-credits-frame">
