fixed scroll bars on firefox

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <div id="main-canvas-container" class="border-box row">
                     <div id="marquee-text" class="center-align">Happy birthday, kson!<br>
                         お誕生日おめでとう!</div>
+                    <div id="marquee-image" class="">
+                        <img src="img/site-style/kson_with_doll.png">
+                    </div>
                     <div class="frame canvas-frame"></div>
                     <!-- <div>
                         <img src="img/site-style/kson_with_doll.png">
@@ -71,12 +74,17 @@
                             <img id="pop-up-photo" class="row">
                         </div>
                         <div class="pop-up-2 center-align">
+                            <div id="pop-up-gradient"></div>
                             <div>
                                 Please consider sharing your doll on Twitter with the tag <b>#KSONDOLL</b> so everyone can see it!!!<br>
                                 完成したら <b>#KSONDOLL</b>でツイートして、みんなに見せよう!!!
                             </div>
                             <div>
                                 <h5>Credits:</h5>
+                                <h6>Our Muse</h6>
+                                <ul>
+                                    kson kumichou (@ksonONAIR)
+                                </ul>
                                 <h6>Director</h6>
                                 <ul>    
                                     Elisaya (@v_elisaya)
