started work on second accessories menu

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div id="main-canvas-container" class="border-box row">
                     <div id="marquee-text" class="center-align">Happy birthday, kson!<br>
                         お誕生日おめでとう!</div>
-                    <div id="marquee-image" class="">
+                    <div id="marquee-image">
                         <img src="img/site-style/kson_with_doll.png">
                     </div>
                     <div class="frame canvas-frame"></div>
@@ -70,8 +70,8 @@
                         <div id="pop-up-close">
                             <img src="img/site-style/cross.png">
                         </div>
-                        <div class="pop-up-1 center-align">
-                            <img id="pop-up-photo" class="row">
+                        <div id="pop-up-photo" class="pop-up-1">
+                            <!-- <img id="pop-up-photo" class="row"> -->
                         </div>
                         <div class="pop-up-2 center-align">
                             <div id="pop-up-gradient"></div>
@@ -152,7 +152,7 @@
                                 <div class="frame misc-button-download-frame">
                                 </div>
                             </button>
-                            <a class='misc-button border-box button center-align' href="https://twitter.com/intent/tweet?text=Happy%20birthday%2C%20kson%21&amp;hashtags=KSONDOLL" target="_blank" class="share-twitter">
+                            <a class='misc-button border-box button center-align' href="https://twitter.com/intent/tweet?text=Happy%20birthday%2C%20kson%21%20%E3%81%8A%E8%AA%95%E7%94%9F%E6%97%A5%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%21&amp;hashtags=KSONDOLL" target="_blank" class="share-twitter">
                                 <button  id='misc-button-credits' class="misc-button center-align">
                                     <img src="img/site-style/button6_t.png">
                                     <div class="frame misc-button-credits-frame">
