added mutliple accessory layers

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="pop-up-2 center-align">
                             <div id="pop-up-gradient"></div>
                             <div>
-                                Please consider sharing your doll on Twitter with the tag <b>#KSONDOLL</b> so everyone can see it!!!<br>
+                                Please consider sharing your doll on Twitter with the tag <b>#KSONDOLL</b> so everyone may see it!!!<br>
                                 完成したら <b>#KSONDOLL</b>でツイートして、みんなに見せよう!!!
                             </div>
                             <div>
