--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <!-- <div class="row">happy birthday bossu</div> -->
             <div id='main-container'>
                 <div id="main-canvas-container" class="border-box row">
-                    <div id="marquee-text" class="center-align">Happy birthday, kson!<br>
+                    <div id="marquee-text" class="center-align cool-font-shadow">Happy birthday, kson!<br>
                         お誕生日おめでとう!</div>
                     <div id="marquee-image">
                         <img src="img/site-style/kson_with_doll.png">
@@ -80,7 +80,7 @@
                                 完成したら <b>#KSONDOLL</b>でツイートして、みんなに見せよう!!!
                             </div>
                             <div>
-                                <h5>Credits:</h5>
+                                <h5 class="cool-font-shadow">Credits:</h5>
                                 <h6>Our Muse</h6>
                                 <ul>
                                     kson kumichou (@ksonONAIR)
