added tanned models, fixed nyctea items, fixed certain accessory sorting

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                                     @itsuku_129 •
                                     @Senriso_riki •
                                     @ryoru97 •
+                                    @Fubadas •
                                     @pa75727 •
                                     @pandora_box9 •
                                     @_patta_chan
