--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                                     @Fubadas •
                                     @pa75727 •
                                     @pandora_box9 •
-                                    @_patta_chan
+                                    @_patta_chan •
+                                    @tokitosonemi
                                 </ul>
                             </div>
                         </div>
