--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta id='meta-img' property="og:image" content="">
-    <meta id='meta-title' property="og:title" content="kson maker">
+    <meta id='meta-img' property="og:image" content="https://img.itch.zone/aW1hZ2UvMTUxOTAwMS85MTMzMjUzLmdpZg==/250x600/eDBlYA.gif">
+    <meta id='meta-title' property="og:title" content="Dress up kson!">
     <meta id='meta-desc' property="og:description" content="Dress up our beautiful kumichou!">
-    <meta name="twitter:card" content="summary">
-    <title>kson maker</title>
+    <meta name="twitter:card" content="Dress-up your own kson! 22nd birthday celebration project for ksonONAIR! ksonに着せ替えよう! ksonONAIR 22歳お誕生日記念プロジェクト">
+    <title>Dress up kson!</title>
     <link rel="stylesheet" type="text/css" href="./css/normalize.css">
     <link rel="stylesheet" type="text/css" href="./css/skeleton.css">
     <link rel="stylesheet" type="text/css" href="./css/app.css">
@@ -47,12 +47,12 @@
                         </div>
                     </div>
                     <div id="misc-container">
-                        <button  id='misc-button-random' class="border-box misc-button center-align" onclick="random()">
+                        <button id='misc-button-random' class="border-box misc-button center-align" onclick="random()">
                             <img src="img/site-style/button1_t.png">
                             <div class="frame misc-button-random-frame">
                             </div>
                         </button>
-                        <button  id='misc-button-generate' class="border-box misc-button center-align" onclick="finalize()">
+                        <button id='misc-button-generate' class="border-box misc-button center-align" onclick="finalize()">
                             <img src="img/site-style/button2_t.png">
                             <div class="frame misc-button-generate-frame">
                             </div>
@@ -144,18 +144,19 @@
                                     @pa75727 •
                                     @pandora_box9 •
                                     @_patta_chan •
-                                    @tokitosonemi
+                                    @tokitosonemi •
+                                    @Error22__
                                 </ul>
                             </div>
                         </div>
                         <div class="pop-up-3 center-align">
-                            <button  id='misc-button-download' class="border-box misc-button center-align" onclick="download()">
+                            <button id='misc-button-download' class="border-box misc-button center-align" onclick="download()">
                                 <img src="img/site-style/button4_t.png">
                                 <div class="frame misc-button-download-frame">
                                 </div>
                             </button>
                             <a class='misc-button border-box button center-align' href="https://twitter.com/intent/tweet?text=Happy%20birthday%2C%20kson%21%20%E3%81%8A%E8%AA%95%E7%94%9F%E6%97%A5%E3%81%8A%E3%82%81%E3%81%A7%E3%81%A8%E3%81%86%21&amp;hashtags=KSONDOLL" target="_blank" class="share-twitter">
-                                <button  id='misc-button-credits' class="misc-button center-align">
+                                <button id='misc-button-credits' class="misc-button center-align">
                                     <img src="img/site-style/button6_t.png">
                                     <div class="frame misc-button-credits-frame">
                                     </div>
